<resources>
    <string name="app_name">WildAssist</string>
    <string name="btnLogin_label">LOGIN</string>
    <string name="btnRegister_label">REGISTER</string>
    <string name="btnRegisterSubmit_label">Create Account</string>
    <string name="cbTerms_label">I have read and understood the Terms and Conditions.</string>
    <string name="txtName_label">Firstname M.I. Lastname</string>
    <string name="txtEmail_label">example@email.com</string>
    <string name="txtPassword_label">Password123</string>
    <string name="btnClear_label">Clear</string>
    <string name="btnEditProfile_label">Edit Profile</string>
    <string name="btnEnterFocusMode_label">Enter Focus Mode</string>
    <string name="btnEditProfileSubmit_label">Save Changes</string>
    <string name="btnNewBookingSubmit_label">Submit</string>
    <string name="btnNewBooking_label">New Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>